# pedalboard-midi

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  deploy.sh  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  ci_checks.yml
doc/: XTone Rebuild.fzz
docs/: architecture.md  ui-design.md
docs/adr/: 001-sequential-storage-for-presets.md  002-unsafe-code-policy.md  003-simplified-property-exchange.md
src/: action.rs  config_mode.rs  crash.rs  display.rs  events.rs  hmi.rs  labels.rs  ledring.rs  leds.rs  lib.rs  long_press.rs  main.rs  mmi.rs  opendeck_handler.rs  pe_handler.rs  pe_sysex.rs  persist.rs  preset_flash.rs  preset_format.rs  storage.rs  system_status.rs
src/config/: mod.rs
src/devices/: mod.rs  pedalboard_audio.rs  pedalboardaudio.rs  plethora.rs  rc500.rs
src/handler/: dispatch.rs  live_effect.rs  live_looper.rs  liveeffect.rs  livelooper.rs  mod.rs  opendeck_handler.rs  setuplooper.rs
src/handler/dispatch/: live_effect.rs  live_looper.rs  mod.rs  opendeck.rs  opendeck_handler.rs  setup_looper.rs  test.rs
src/hmi/: display.rs  encoder_accel.rs  inputs.rs  ledring.rs  leds.rs  mod.rs
src/hmi/display/: mod.rs
src/loudness/: mod.rs
src/usb/: mod.rs
src/views/: config_mode.rs  mod.rs  overlay.rs  performance.rs  preset_overlay.rs
tests-host/: Cargo.toml
tests-host/tests/: config_mode.rs  long_press.rs  overlay.rs  pe_handler.rs  pe_sysex.rs  performance.rs  preset_format.rs
