[package]
edition = "2021"
name = "pedalboard-midi"
version = "0.2.0"
readme = "README.md"
description = "Midi Pedalboard based on rp2040"
license-file = "LICENSE.md"
documentation = "README.md"
homepage = "https://github.com/pedalboard"
repository = "https://github.com/pedalboard/pedalboard-midi"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = { version = "0.3.0", features = ["portable-atomic"] }

rtic = { version = "2.2.0", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["rp2040"] }
rtic-sync = { version = "1.4.0", features = ["defmt-03"] }

rp2040-hal = { version = "0.12.0", features = [
  "rt",
  "critical-section-impl",
  "rom-func-cache",
  "defmt",
] }
rp2040-boot2 = "0.3.0"

nb = { version = "1.1.0" }
heapless = { version = "0.9.3", features = ["defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }

# hal drivers
smart-leds = "0.4.0"
ws2812-pio = { git = "https://github.com/IVAN-MK7/ws2812-pio-rs.git", branch = "hal-0.12" }
ssd1327-i2c = { git = "https://github.com/pedalboard/ssd1327-i2c", branch = "master" }
# embedded-hal 1.0.0 needs to be released
rotary-encoder-embedded = { git = "https://github.com/ost-ing/rotary-encoder-embedded.git", rev = "e042248" }
usb-device = { version = "0.3.2", features = ["defmt"] }

midi-convert = { version = "0.2.0", features = ["defmt"] }
embedded-midi = { git = "https://github.com/rust-midi/embedded-midi.git", branch = "main" }
usbd-midi = { version = "0.5.1" }
midi-types = { version = "0.2.0", features = ["defmt"] }
# midi crates
opendeck = { git = "https://github.com/pedalboard/opendeck", branch = "main" }
midi2 = { version = "0.11", default-features = false, features = [
  "channel-voice1",
  "sysex7",
  "system-common",
] }

# other libs
movavg = { version = "2.3.0", default-features = false }
debouncr = "0.2.2"
colorous = { version = "1.0.15", default-features = false }
embedded-graphics = "0.8.2"
embedded-text = "0.7.3"
tinybmp = "0.7.0"

[patch.crates-io]

[patch."https://github.com/pedalboard/opendeck"]
opendeck = { path = "../opendeck" }

[dev-dependencies]

[features]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
