[package]
name = "pedalboard-views-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
heapless = "0.9.3"
pedalboard-protocol = { path = "../../pedalboard-protocol" }
smart-leds = "0.4.0"

[[test]]
name = "performance"
path = "tests/performance.rs"

[[test]]
name = "preset_format"
path = "tests/preset_format.rs"

[[test]]
name = "pe_handler"
path = "tests/pe_handler.rs"
