[package]
name = "pedalboard-views-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
heapless = "0.9.3"
midi-controller = "0.2.0"
smart-leds = "0.4.0"
eg-seven-segment = "0.2.0"

[[test]]
name = "performance"
path = "tests/performance.rs"

[[test]]
name = "pe_handler"
path = "tests/pe_handler.rs"
